--- a/cfg/sourcemod/weapon_restrict.cfg
+++ b/cfg/sourcemod/weapon_restrict.cfg
@@ -28,7 +28,7 @@ sm_perplayer_restrict "1"
 // Default: "1"
 // Minimum: "0.000000"
 // Maximum: "1.000000"
-sm_perplayer_specs "0"
+sm_perplayer_specs "1"
 
 // [CT] [O:ak47] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -42,7 +42,7 @@ sm_restrict_ak47_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_ak47_ct "-1"
+sm_restrict_ak47_t "-1"
 
 // [CT] [O:assaultsuit] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -56,7 +56,7 @@ sm_restrict_assaultsuit_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_assaultsuit_ct "-1"
+sm_restrict_assaultsuit_t "-1"
 
 // [CT] [O:aug] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -70,7 +70,7 @@ sm_restrict_aug_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_aug_ct "-1"
+sm_restrict_aug_t "-1"
 
 // [CT] [O:awp] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -98,7 +98,7 @@ sm_restrict_bizon_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_bizon_ct "-1"
+sm_restrict_bizon_t "-1"
 
 // [T] [O:c4] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -119,7 +119,7 @@ sm_restrict_deagle_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_deagle_ct "-1"
+sm_restrict_deagle_t "-1"
 
 // [CT] [O:decoy] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -133,7 +133,7 @@ sm_restrict_decoy_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_decoy_ct "-1"
+sm_restrict_decoy_t "-1"
 
 // [CT] [O:defuser] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -154,7 +154,7 @@ sm_restrict_elite_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_elite_ct "-1"
+sm_restrict_elite_t "-1"
 
 // [CT] [O:famas] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -168,7 +168,7 @@ sm_restrict_famas_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_famas_ct "-1"
+sm_restrict_famas_t "-1"
 
 // [CT] [O:fiveseven] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -182,7 +182,7 @@ sm_restrict_fiveseven_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_fiveseven_ct "-1"
+sm_restrict_fiveseven_t "-1"
 
 // [CT] [O:flashbang] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -196,7 +196,7 @@ sm_restrict_flashbang_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_flashbang_ct "-1"
+sm_restrict_flashbang_t "-1"
 
 // [CT] [O:g3sg1] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -210,7 +210,7 @@ sm_restrict_g3sg1_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_g3sg1_ct "-1"
+sm_restrict_g3sg1_t "-1"
 
 // [CT] [O:galilar] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -224,7 +224,7 @@ sm_restrict_galilar_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_galilar_ct "-1"
+sm_restrict_galilar_t "-1"
 
 // [CT] [O:glock] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -238,7 +238,7 @@ sm_restrict_glock_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_glock_ct "-1"
+sm_restrict_glock_t "-1"
 
 // [CT] [O:hegrenade] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -252,7 +252,7 @@ sm_restrict_hegrenade_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_hegrenade_ct "-1"
+sm_restrict_hegrenade_t "-1"
 
 // [CT] [O:hkp2000] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -266,7 +266,7 @@ sm_restrict_hkp2000_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_hkp2000_ct "-1"
+sm_restrict_hkp2000_t "-1"
 
 // [CT] [O:incgrenade] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -280,7 +280,7 @@ sm_restrict_incgrenade_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_incgrenade_ct "-1"
+sm_restrict_incgrenade_t "-1"
 
 // [CT] [O:kevlar] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -294,7 +294,7 @@ sm_restrict_kevlar_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_kevlar_ct "-1"
+sm_restrict_kevlar_t "-1"
 
 // [CT] [O:knife] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -336,7 +336,7 @@ sm_restrict_m249_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_m249_ct "-1"
+sm_restrict_m249_t "-1"
 
 // [CT] [O:m4a1] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -350,7 +350,7 @@ sm_restrict_m4a1_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_m4a1_ct "-1"
+sm_restrict_m4a1_t "-1"
 
 // [CT] [O:mac10] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -378,7 +378,7 @@ sm_restrict_mag7_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_mag7_ct "-1"
+sm_restrict_mag7_t "-1"
 
 // [CT] [O:molotov] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -392,7 +392,7 @@ sm_restrict_molotov_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_molotov_ct "-1"
+sm_restrict_molotov_t "-1"
 
 // [CT] [O:mp7] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -406,7 +406,7 @@ sm_restrict_mp7_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_mp7_ct "-1"
+sm_restrict_mp7_t "-1"
 
 // [CT] [O:mp9] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -420,7 +420,7 @@ sm_restrict_mp9_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_mp9_ct "-1"
+sm_restrict_mp9_t "-1"
 
 // [CT] [O:negev] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -434,7 +434,7 @@ sm_restrict_negev_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_negev_ct "-1"
+sm_restrict_negev_t "-1"
 
 // [CT] [O:nova] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -448,7 +448,7 @@ sm_restrict_nova_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_nova_ct "-1"
+sm_restrict_nova_t "-1"
 
 // [CT] [O:nvgs] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -462,7 +462,7 @@ sm_restrict_nvgs_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_nvgs_ct "-1"
+sm_restrict_nvgs_t "-1"
 
 // [CT] [O:p250] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -476,7 +476,7 @@ sm_restrict_p250_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_p250_ct "-1"
+sm_restrict_p250_t "-1"
 
 // [CT] [O:p90] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -490,7 +490,7 @@ sm_restrict_p90_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_p90_ct "-1"
+sm_restrict_p90_t "-1"
 
 // [CT] [O:sawedoff] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -504,7 +504,7 @@ sm_restrict_sawedoff_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_sawedoff_ct "-1"
+sm_restrict_sawedoff_t "-1"
 
 // [CT] [O:scar20] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -518,7 +518,7 @@ sm_restrict_scar20_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_scar20_ct "-1"
+sm_restrict_scar20_t "-1"
 
 // [CT] [O:sg556] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -532,7 +532,7 @@ sm_restrict_sg556_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_sg556_ct "-1"
+sm_restrict_sg556_t "-1"
 
 // [CT] [O:smokegrenade] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -546,7 +546,7 @@ sm_restrict_smokegrenade_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_smokegrenade_ct "-1"
+sm_restrict_smokegrenade_t "-1"
 
 // [CT] [O:ssg08] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -560,7 +560,7 @@ sm_restrict_ssg08_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_ssg08_ct "-1"
+sm_restrict_ssg08_t "-1"
 
 // [CT] [O:taser] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -574,7 +574,7 @@ sm_restrict_taser_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_taser_ct "-1"
+sm_restrict_taser_t "-1"
 
 // [CT] [O:tec9] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -588,7 +588,7 @@ sm_restrict_tec9_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_tec9_ct "-1"
+sm_restrict_tec9_t "-1"
 
 // [CT] [O:ump45] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -602,7 +602,7 @@ sm_restrict_ump45_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_ump45_ct "-1"
+sm_restrict_ump45_t "-1"
 
 // [CT] [O:xm1014] -1 = Unrestricted | 0 = Restricted | 1+ = Allowed quantity
 // -
@@ -616,14 +616,14 @@ sm_restrict_xm1014_ct "-1"
 // Default: "-1"
 // Minimum: "-1.000000"
 // Maximum: "64.000000"
-sm_restrict_xm1014_ct "-1"
+sm_restrict_xm1014_t "-1"
 
 // Immunity from Administrators
 // -
 // Default: "0"
 // Minimum: "0.000000"
 // Maximum: "1.000000"
-sm_weapon_restrict_immunity "1"
+sm_weapon_restrict_immunity "0"
 
 // The interval between bans, 0 - disable
 // -
@@ -636,4 +636,4 @@ sm_weapon_restrict_print_delay "5.0"
 // Default: "0"
 // Minimum: "0.000000"
 // Maximum: "1.000000"
-sm_weapon_restrict_remove_weapon "1"
+sm_weapon_restrict_remove_weapon "0"
